--- a/_assets/sass/config/extends.scss
+++ b/_assets/sass/config/extends.scss
@@ -71,7 +71,7 @@
 %comment_textarea {  
     
     border: solid 3px black;
-    background: $bg-widget;         
+    background: $bg-comment-field;         
     padding: 8px;
     margin: 10pt 0;
     transition: background .3s;    
@@ -80,7 +80,7 @@
     
     &:hover {
         
-       background: lighten( $bg-widget, 6% );
+       background: lighten( $bg-comment-field, 6% );
     }
     
     &::placeholder {
@@ -93,7 +93,7 @@
 %comment_btn {                      
     
     border: solid 3px black;
-    background: $bg-widget;
+    background: $bg-comment-field;
     padding: 10px;
     font-family: "Quicksand";
     font-weight: bold;
@@ -104,7 +104,7 @@
     
     &:hover {
         
-       background: lighten( $bg-widget, 6% );
+       background: lighten( $bg-comment-field, 6% );
     }
 }
 
@@ -564,6 +564,13 @@
             text-align: left;
             background: none;
             letter-spacing: 0px;
+        }
+        
+        h3.post_content_title {            
+            
+            text-align: center;
+            margin: 10px auto;
+            border-bottom: red solid 4px;
         }
         
         h3 {
