refine config variables

--- a/_assets/sass/config/config.scss
+++ b/_assets/sass/config/config.scss
@@ -13,9 +13,9 @@ $bg-search-input: wheat;
 $bg-search-btn: wheat;
 $bg-searchwidget-input: #ffff8e;
 $bg-searchwidget-btn: #ffff8e;
+//$bg-widget-home: #f7f7ab;
 
 $bg-body: lightblue;
-$bg-widget: #f7f7ab;
 $bg-widget-areas: #77d9f9;
 $bg-page: #f5c7a6;
 
@@ -55,6 +55,8 @@ $font-size-xl: 32px;
 $font-size-lg: 18px;
 $font-size-md: 16px;
 $font-size-sm: 12px;
+
+$font-size-vw: 5vw;
 
 // breakpoints
 $breakpoint-sm: 780px;
