center align 404 text

--- a/_assets/sass/config/extends.scss
+++ b/_assets/sass/config/extends.scss
@@ -328,6 +328,13 @@
             margin: 10px auto;
             border-radius: 10px;
         }
+        
+    }
+    
+    
+    p.content_404 {
+            
+        text-align: center;
     }
     
     /* setting inline-code */
